--- a/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
@@ -111,7 +111,7 @@
                 <tbody>
                     @foreach (var item in Model.FPRecords)
                     {
-                        <tr>
+                        <tr class="text-sm hover-household transition duration-300 ease-in-out">
                             <td class="border-b border-gray-100 px-2 py-2 text-left">
                                 @Html.DisplayFor(modelItem => item.ClientId)
                             </td>
