--- a/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "EditOralHealthInfo";
 }
 
-<section class="bg-gray-100">
+<section class="bg-slate-100">
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-2xl font-bold mb-8">Masterlist of Oral Health Care Clients - 15 to 19</h1>
         <div class="flex justify-between items-center mb-8">
