--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -180,7 +180,7 @@
 
                 @foreach (var member in Model.HouseholdMembers)
                 {
-                    <tr class="bg-white border-b">
+                    <tr class="bg-white border-b hover-household transition duration-300 ease-in-out">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                             @member.FullName
                         </th>
