--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<!--Search Bar-->
+
 <div class="container mx-auto px-4 py-8">
     <div class="flex justify-between pb-8">
         <h1 class="text-2xl font-bold">List of Employees</h1>
@@ -21,6 +21,7 @@
 
     </div>
 
+    <!--Search Bar-->
     <div class="flex justify-between items-center mb-8">
         <div class="flex-1 mr-4 relative">
 
@@ -35,67 +36,15 @@
                     </div>
                     <input type="text" id="voice-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Search Employee..." required />
                 </div>
+                <!--Search Button-->
                 <button type="submit" class="inline-flex items-center py-2.5 px-3 ms-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                    </svg>Search
+                    </svg>
+
+                    Search
                 </button>
             </form>
-
-<<<<<<< HEAD
-            <!--Add Employee Button-->
-            <a asp-action="Create" class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out"
-               aria-label="Add Employee">
-                <svg class="h-5 w-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-                </svg>
-                Add Employee
-            </a>
-        </div>
-
-        <!--Table-->
-        <div class="bg-white shadow-md rounded-lg p-8">
-            <table class="table-auto w-full">
-                <thead>
-                    <tr class="bg-gray-200">
-                        <th class="px-4 py-2 text-left">Name</th>
-                        <th class="px-4 py-2 text-left">Age</th>
-                        <th class="px-4 py-2 text-left">Birthday</th>
-                        <th class="px-4 py-2 text-left">Position</th>
-                        <th class="px-4 py-2 text-left">Contact No.</th>
-                        <th class="px-4 py-2 text-left">Address</th>
-                        <th class="px-4 py-2 text-left">Actions</th>
-                    </tr>
-                </thead>
-            <!--Table Contents-->
-                <tbody>
-                    @foreach (var item in Model.Users)
-                    {
-                    <tr class="text-sm hover-household transition duration-300 ease-in-out">
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.FullName)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Age)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Birthday)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Position)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.ContactNo)</td>
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Address)</td>
-                                                        <!--Action Button-->
-                            <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2">
-                                    <i class="fas fa-edit"></i>
-                                </a>
-                                <a asp-action="Profile" asp-route-id="@item.Id" class="text-green-400 hover:text-green-500 mr-2">
-                                    <i class="fas fa-eye"></i>
-                                </a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" class="text-red-300 hover:text-red-400">
-                                <i class="fas fa-trash-alt"></i>
-                            </a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-=======
->>>>>>> f898844f1edf663c97f6795e4a8d44246be44378
         </div>
     </div>
 
