--- a/AUF.EMR.MVC/Views/FamilyPlanning/Details.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Details.cshtml
@@ -137,6 +137,14 @@
         <dd class="col-sm-10">
             @Model.FamilyPlanning.ClientType.ReasonOthers
         </dd>
+        <dt class="col-sm-2">
+            Reason for changing method
+        </dt>
+        <dd class="col-sm-10">
+            @Model.FamilyPlanning.ClientType.ReasonOthers
+        </dd>
+
+
 @*        <dt class="col-sm-2">
             Changing Method Reason
         </dt>
