--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -131,6 +131,9 @@
                 </a>
             </div>
         </div>
+        <div class="flex justify-end py-5">
+            <a asp-action="Index" asp-controller="Household" type="button" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Go Back</a>
+        </div>
     </div>
 </main>
 
