--- a/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
@@ -11,7 +11,7 @@
 
     <!--Print Button-->
     <div class="flex justify-end mb-6">
-        <button type="button" onclick="print('Print', 'OralHealthClient', @Model.HouseholdNo)"
+        <button type="button" onclick="print('Print', 'Masterlist', @Model.HouseholdNo)"
              class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out">
                 Print Adults
         </button>
