--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -97,7 +97,7 @@
                 </svg>
                 <span class="sr-only">Close modal</span>
             </button>
-            <form id="deleteForm" asp-action="Delete" asp-controller="User">
+            <form id="deleteForm" asp-action="Delete" asp-route-householdNo="@Model.HouseholdNo">
                 <div class="p-4 md:p-5 text-center">
                     <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
@@ -121,7 +121,7 @@
         deleteButtons.forEach(function (button) {
             button.addEventListener('click', function () {
                 var memberId = button.getAttribute('data-member-id');
-                var actionUrl = `/User/Delete/${memberId}`;
+                var actionUrl = `/User/Delete/${memberId}?householdNo=${@Model.HouseholdNo}`;
                 deleteForm.setAttribute('action', actionUrl);
             });
         });
