--- a/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "Layouts/_MasterlistLayout";
     ViewData["Title"] = "Masterlist of Adults";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
 
