--- a/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "ChildDetails";
     Layout = "Layouts/_MasterlistLayout";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
 
