--- a/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
@@ -3,7 +3,9 @@
 @{
     Layout = "Layouts/_MasterlistLayout";
     ViewData["Title"] = "ChildDetails";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
+
 <div class="container mx-auto py-8">
 
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
