--- a/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "Layouts/_MasterlistLayout";
     ViewData["Title"] = "Masterlist of Adolescents";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
 <div class="container mx-auto px-4 py-8">
