--- a/AUF.EMR.MVC/Views/Masterlist/Infant.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Infant.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "Layouts/_MasterlistLayout";
     ViewData["Title"] = "Masterlist of Infants";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-2xl font-bold mb-8">Masterlist of Infants</h1>
