--- a/AUF.EMR.MVC/Views/Shared/Layouts/_PregnancyRecordsIndex.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_PregnancyRecordsIndex.cshtml
@@ -20,7 +20,7 @@
     </header>
     <div class="">
         <main role="main" class="">
-            @await Html.PartialAsync("Navigations/_FormSideBar", ViewData["Barangay"]);
+            @await Html.PartialAsync("Navigations/_FormSideBar", ViewData["HouseholdNo"]);
             <div class="p-4 sm:ml-72">
                 @RenderBody()
             </div>
