--- a/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
@@ -78,7 +78,8 @@
                                     <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
                                 </svg>
                             </div>
-                            <input datepicker asp-for="Household.FirstQtrVisit" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Select date">
+                            <input datepicker asp-for="Household.FirstQtrVisit" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" 
+                            holder="Select date">
                             <span asp-validation-for="Household.FirstQtrVisit" class="block mb-2 text-sm text-red-700"></span>
                         </div>
                     </div>
@@ -181,18 +182,13 @@
                 <input type="hidden" asp-for="Household.DateCreated" />
             </div>
             <div class="flex justify-end">
-                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:ring-4 focus:ring-red-200">Back</a>
+                <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:ring-4 focus:ring-red-200">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 focus:ring-4 focus:ring-green-200">Save</button>
             </div>
         </form>
     </div>
 
 </section>
-
-<div>
-    <a asp-action="HouseholdProfile" asp-route-householdNo="@Model.Household.HouseholdNo">Back to List</a>
-</div>
-
 
 <script>
     const philhealthMemberRadio = document.getElementById('philhealthMember');
