--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "Layouts/_HouseholdLayout";
     ViewData["Title"] = "Index";
+    ViewData["RequestUrl"] = Model.RequestUrl;
 }
 
 <section class="flex justify-center">
@@ -37,7 +38,7 @@
             <div>
                 @foreach (var item in Model.Households)
                 {
-                    @await Html.PartialAsync("Components/_HouseholdCard", item)
+                    @await Html.PartialAsync("Components/_HouseholdCard", item);
                 }
             </div>
         </div>
@@ -52,6 +53,15 @@
                         </li>
                         <li>
                             <a asp-action="Index" asp-route-page="@(Model.Households.PageIndex - 1)" asp-route-query="@Model.Query" class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <button class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-300 bg-white border border-e-0 border-gray-200 rounded-s-lg cursor-default" disabled>First</button>
+                        </li>
+                        <li>
+                            <button class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-300 bg-white border border-e-0 border-gray-200 cursor-default" disabled>Previous</button>
                         </li>
                     }
 
@@ -70,10 +80,19 @@
                     @if (Model.Households.PageIndex < Model.Households.TotalPages)
                     {
                         <li>
-                            <a asp-action="Index" asp-route-page="@(Model.Households.PageIndex + 1)" asp-route-query="@Model.Query" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+                            <a asp-action="Index" asp-route-page="@(Model.Households.PageIndex + 1)" asp-route-query="@Model.Query" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700">Next</a>
                         </li>
                         <li>
-                            <a asp-action="Index" asp-route-page="@Model.Households.TotalPages" asp-route-query="@Model.Query" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Last</a>
+                            <a asp-action="Index" asp-route-page="@Model.Households.TotalPages" asp-route-query="@Model.Query" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700">Last</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <button class="flex items-center justify-center px-3 h-8 leading-tight text-gray-300 bg-white border border-gray-200 cursor-default" disabled>Next</button>
+                        </li>
+                        <li>
+                            <button class="flex items-center justify-center px-3 h-8 leading-tight text-gray-300 bg-white border border-gray-200 rounded-e-lg cursor-default" disabled>Last</button>
                         </li>
                     }
                 </ul>
