--- a/AUF.EMR.MVC/Views/Shared/Components/_HouseholdCard.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Components/_HouseholdCard.cshtml
@@ -1,60 +1,87 @@
 ﻿@model Household
 
-<div class="w-full p-8 bg-white border border-gray-200 rounded-lg shadow mb-6 hover-household overflow-x-auto">
-    <!-- First row -->
-    <div class="grid grid-cols-3 grid-flow-col gap-4">
-        <div>
-            <h6 class="text-gray-900 text-sm font-bold mb-2">Household no.</h6>
-            <p class="text-gray-800 text-sm font-medium">@Model.HouseholdNo</p>
+<a asp-action="HouseholdProfile" asp-route-householdNo="@Model.HouseholdNo">
+    <div class="w-full p-8 bg-white border border-gray-200 rounded-lg shadow mb-6 hover-household overflow-x-auto">
+        <!-- First row -->
+        <div class="grid grid-cols-3 grid-flow-col gap-4">
+            <div>
+                <h6 class="text-gray-900 text-sm font-bold mb-2">Household no.</h6>
+                <p class="text-gray-800 text-sm font-medium">@Model.HouseholdNo</p>
+            </div>
+            <div>
+                <h6 class="text-gray-900 text-sm font-bold mb-2">Household head</h6>
+                <p class="text-gray-800 text-sm font-medium">@Model.FullName</p>
+            </div>
+            <div>
+                <h6 class="text-gray-900 text-sm font-bold mb-2">Address</h6>
+                <p class="text-gray-800 text-sm font-medium">@Model.FullAddress</p>
+            </div>
         </div>
-        <div>
-            <h6 class="text-gray-900 text-sm font-bold mb-2">Household head</h6>
-            <p class="text-gray-800 text-sm font-medium">@Model.FullName</p>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+        <!-- Second row -->
+        <div class="grid grid-cols-2 grid-flow-col gap-4">
+            <div>
+                <h6 class="text-gray-900 text-sm font-bold mb-2">Household members</h6>
+                <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
+                    @foreach (var member in Model.HouseholdMembers)
+                    {
+                        <li class="text-gray-800 text-sm font-medium">@member.FullName</li>
+                    }
+                </ul>
+            </div>
+            <div>
+                <h6 class="text-gray-900 text-sm font-bold mb-2">Relationship to household head</h6>
+                <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
+                    @foreach (var member in Model.HouseholdMembers)
+                    {
+                        <LI class="text-gray-800 text-sm font-medium">@member.GetRelationshipString</LI>
+                    }
+                </ul>
+            </div>
         </div>
-        <div>
-            <h6 class="text-gray-900 text-sm font-bold mb-2">Address</h6>
-            <p class="text-gray-800 text-sm font-medium">@Model.FullAddress</p>
+        <!-- Third row -->
+        <div class="flex justify-end mt-4">
+            <a asp-action="HouseholdProfile" asp-route-householdNo="@Model.HouseholdNo" type="button" class="text-white font-medium bg-primary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
+                <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M4 4a2 2 0 0 0-2 2v12a2 2 0 0 0 .087.586l2.977-7.937A1 1 0 0 1 6 10h12V9a2 2 0 0 0-2-2h-4.532l-1.9-2.28A2 2 0 0 0 8.032 4H4Zm2.693 8H6.5l-3 8H18l3-8H6.693Z" clip-rule="evenodd" />
+                </svg>
+            </a>
+            <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-requestUrl="@ViewData["RequestUrl"]" class="text-white font-medium bg-secondary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
+                <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                    <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
+                </svg>
+            </a>
+            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="text-white font-medium bg-danger-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2" type="button">
+                <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
+                </svg>
+            </button>
         </div>
     </div>
-    <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
-    <!-- Second row -->
-    <div class="grid grid-cols-2 grid-flow-col gap-4">
-        <div>
-            <h6 class="text-gray-900 text-sm font-bold mb-2">Household members</h6>
-            <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
-                @foreach (var member in Model.HouseholdMembers)
-                {
-                    <li class="text-gray-800 text-sm font-medium">@member.FullName</li>
-                }
-            </ul>
+</a>
+
+<div id="popup-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center" data-modal-hide="popup-modal">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <form asp-action="Delete" asp-route-id="@Model.Id">
+                <div class="p-4 md:p-5 text-center">
+                    <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
+                    <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this household profile?</h3>
+                    <button data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
+                    <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                        Yes, I'm sure
+                    </button>
+                </div>
+            </form>
         </div>
-        <div>
-            <h6 class="text-gray-900 text-sm font-bold mb-2">Relationship to household head</h6>
-            <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
-                @foreach (var member in Model.HouseholdMembers)
-                {
-                    <LI class="text-gray-800 text-sm font-medium">@member.GetRelationshipString</LI>
-                }
-            </ul>
-        </div>
-    </div>
-    <!-- Third row -->
-    <div class="flex justify-end mt-4">
-        <a asp-action="HouseholdProfile" asp-route-householdNo="@Model.HouseholdNo" type="button" class="text-white font-medium bg-primary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
-            <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
-                <path fill-rule="evenodd" d="M4 4a2 2 0 0 0-2 2v12a2 2 0 0 0 .087.586l2.977-7.937A1 1 0 0 1 6 10h12V9a2 2 0 0 0-2-2h-4.532l-1.9-2.28A2 2 0 0 0 8.032 4H4Zm2.693 8H6.5l-3 8H18l3-8H6.693Z" clip-rule="evenodd" />
-            </svg>
-        </a>
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="text-white font-medium bg-secondary-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
-            <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
-                <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
-                <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
-            </svg>
-        </a>
-        <button type="button" class="text-white font-medium bg-danger-50 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-full text-sm px-3 py-3 text-center inline-flex items-center me-2 mb-2">
-            <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 24 24">
-                <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
-            </svg>
-        </button>
     </div>
 </div>
