--- a/AUF.EMR.MVC/Views/WRA/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Edit.cshtml
@@ -42,7 +42,7 @@
                             </div>
                             <div class="flex items-center me-4">
                                 <input asp-for="WRA.IsPlanningChildren" id="notPlanning" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="WRA.IsPlanningChildren" class="ms-2 text-sm font-medium text-gray-900">No</label>
+                                <label asp-for="WRA.IsPlanningChildren" class="ms-2 text-sm font-medium text-gray-900">No, Limiting</label>
                             </div>
                         </div>
                         <span asp-validation-for="WRA.IsPlanningChildren" class="block mb-2 text-sm text-red-700"></span>
