--- a/AUF.EMR.MVC/Views/OralHealthClient/Details.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/Details.cshtml
@@ -2,56 +2,66 @@
 
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
-    Layout = "Layouts/_FormLayout";
+    Layout = "Layouts/_OralHealthLayout";
 }
 
 <div class="container mx-auto px-4 py-8">
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
-        <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Oral Health Client Details</h1>
-        <hr class="mb-4">
+        <div class="flex justify-between">
+            <div>            
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Oral Health Client</h1>
+            </div>
+            <div class="flex justify-end mb-6 gap-3">
+                <a asp-action="Edit" asp-route-id="@Model.HouseholdMember.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                        <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
+                    </svg>
+                    Update
+                </a>
+                <button data-modal-target="popup-modal-2" data-member-id="@Model.HouseholdMember.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
+                    <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
+                    </svg>
+                    <span class="hidden md:inline font-medium">&nbsp; Delete</span>
+                </button>
+            </div>
+        </div>
+        <hr class="mb-8">
 
         <dl class="space-y-4">
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">HH.NO/ Family Serial No.</dt>
+                <dt class="text-gray-800 font-semibold w-80">HH.NO/ Family Serial No.</dt>
                 <dd class="text-gray-900">@Model.HouseholdNo</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">First Name</dt>
-                <dd class="text-gray-900">@Model.HouseholdMember.FirstName</dd>
+                <dt class="text-gray-800 font-semibold w-80">Client Name</dt>
+                <dd class="text-gray-900">@Model.HouseholdMember.FormattedFullName</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Middle Name</dt>
-                <dd class="text-gray-900">@Model.HouseholdMember.MotherMaidenName</dd>
-            </div>
-            <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Last Name</dt>
-                <dd class="text-gray-900">@Model.HouseholdMember.LastName</dd>
-            </div>
-            <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Address</dt>
+                <dt class="text-gray-800 font-semibold w-80">Address</dt>
                 <dd class="text-gray-900">@Model.HouseholdMember.Household.FullAddress</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Sex</dt>
+                <dt class="text-gray-800 font-semibold w-80">Sex</dt>
                 <dd class="text-gray-900">@Model.HouseholdMember.Sex</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Age</dt>
+                <dt class="text-gray-800 font-semibold w-80">Age</dt>
                 <dd class="text-gray-900">@Model.HouseholdMember.Age</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">Date of Birth</dt>
+                <dt class="text-gray-800 font-semibold w-80">Date of Birth</dt>
                 <dd class="text-gray-900">@Model.HouseholdMember.Birthday</dd>
             </div>
             <div class="flex items-center">
-                <dt class="text-gray-600 font-semibold w-80">NHTS</dt>
+                <dt class="text-gray-800 font-semibold w-80">NHTS</dt>
                 <dd class="text-gray-900">@((Model.HouseholdMember.IsNhts) ? "NHTS" : "Non-NHTS")</dd>
             </div>
         </dl>
-
-        <div class="flex justify-start mt-8 space-x-4">
-            <a asp-action="EditOralHealthInfo" asp-route-id="@Model.HouseholdMember.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5">Edit</a>
-            <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5">Back to List</a>
-        </div>
+    </div>
+    <div class="flex justify-end mt-8">
+        <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-3 me-2 mb-2">Back to List</a>
     </div>
 </div>
